@@ -1,3 +1,7 @@
+2015-06-25  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+	* tools/cmp_gp_mp.sh:
+	  Updated based on the mplabx-3.05.
+
 2015-05-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
 	* tools/cfg-import.pl, tools/cmp_gp_mp.sh,
 	  tools/device-help.pl, tools/device-manager.pl:
