@@ -1,3 +1,8 @@
+2015-08-02  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+    header/p16f870.inc, header/p16f871.inc, header/p16f872.inc:
+    Fixed the bug: "#281 Header p16f872.inc contains macro with lower case letters"
+    Thanks to Martin.
+
 2015-05-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * configure.ac, configure:
     Update the DEFAULT_MPLABX_PATH.
